--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,18 @@
             type="button"
         >Update Table</button>
     </div>
+    <h2>Exacta</h2>
     <table>
         <thead id="thead">
         </thead>
         <tbody id="tbody">
+        </tbody>
+    </table>
+    <h2>DD Implied Odds</h2>
+    <table>
+        <thead id="thead2">
+        </thead>
+        <tbody id="tbody2">
         </tbody>
     </table>
     <script src="index.js"></script>
