--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,13 @@
         <tbody id="tbody2">
         </tbody>
     </table>
+    <h2>Expected Payouts</h2>
+    <table>
+        <thead id="thead3">
+        </thead>
+        <tbody id="tbody3">
+        </tbody>
+    </table>
     <script src="index.js"></script>
 </body>
 </html>
